<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single"
        tools:ignore="ExtraText">

        // Nav Home
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_title_home"
            app:iconTint="@color/nav_item_color"
            app:iconPadding="8dp" />

        // Nav Profile
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_title_profile"
            app:iconTint="@color/nav_item_color"
            app:iconPadding="8dp" />
    </group>

    <item android:title="@string/menu_section_preferences">
        <menu>
            <group android:checkableBehavior="single">
                // Nav Notifications
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/menu_title_notifications"
                    app:iconTint="@color/nav_item_color"
                    app:iconPadding="8dp" />

                // Nav Settings
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_title_settings"
                    app:iconTint="@color/nav_item_color"
                    app:iconPadding="8dp" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_section_account">
        <menu>
            <group android:checkableBehavior="single">
                // Nav Logout
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_title_logout"
                    app:iconPadding="8dp" />
            </group>
        </menu>
    </item>

</menu>